# zipf

./: Makefile  README.md  pyproject.toml  tests.ipynb
results/: releases.txt
