[tool.poetry]
name = "zipf"
version = "0.1.0"
description = ""
authors = ["João Nogueira"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
makefile2dot = "^1.0.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
